# getopt.rs

./: .gitignore  Cargo.toml  LICENSE  README.md  _boring
src/: error.rs  errorkind.rs  lib.rs  opt.rs  parser.rs  prelude.rs  result.rs  tests.rs
