[package]
name = "getopt"
version = "1.1.4"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2021"
description = "A minimal, (essentially) POSIX-compliant option parser"
readme = "README.md"
repository = "https://git.dragonma.us/rust/getopt"
license = "BSD-3-Clause-Clear"
categories = ["command-line-interface", "command-line-utilities"]
publish = true
