[package]
name = "getopt"
version = "1.1.5"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
rust-version = "1.30.0"
description = "A minimal, (essentially) POSIX-compliant option parser"
readme = "README.md"
repository = "https://git.dragonma.us/rust/getopt"
license = "BSD-3-Clause-Clear"
categories = ["command-line-interface", "command-line-utilities"]
publish = true
